# xComputer

./: README  README.md  stack.yaml  xComputer.cabal
programs/: multiply.xasm  test.xasm
src/: Assembler.hs  AssemblerParser.hs  AssemblerTranslator.hs  Machine.hs  Main.hs  PpComputerState.hs  Registers.hs
